tests/fixtures/invalid/pow_none_dict_int.py
# Cannot call pow() with None, Dict[str, int], Int
x = pow(None, {"a": 1}, 1)
